Configuration Settings / Crafting / Targeted Button Fix

--- a/templates/actor/dialog/targeted-attack.hbs
+++ b/templates/actor/dialog/targeted-attack.hbs
@@ -1,19 +1,22 @@
 <div class="targeted-attack">
-  <form autocomplete="off">
-    <div class="vault-boy-target"></div>
-    <div class="targeted-grid">
-        <div class="head-top"><button data-tooltip="Head (+4AP)" name="head"></button></div>
-        <div class="eyes"><button data-tooltip="Eyes (+5AP)" name="eyes"></button></div>
-        <div class="head-bottom"><button data-tooltip="Head (+4AP)" name="head"></button></div>
-        <div class="left-arm"><button data-tooltip="Arm (+3AP)" name="arm"></button></div>
-        <div class="left-hand"><button data-tooltip="Carried item (+3AP)" name="carried"></button></div>
-        <div class="torso"><button data-tooltip="Torso (+2AP)" name="torso"></button></div>
-        <div class="right-arm"><button data-tooltip="Arm (+3AP)" name="arm"></button></div>
-        <div class="right-hand"><button data-tooltip="Carried item (+3AP)" name="carried"></button></div>
-        <div class="groin"><button data-tooltip="Groin (+3AP)" name="groin"></button></div>
-        <div class="left-leg"><button data-tooltip="Leg (+2AP)" name="leg"></button></div>
-        <div class="right-leg"><button data-tooltip="Leg (+2AP)" name="leg"></button></div>
-        <p><a class="content-link" draggable="false" data-link="" data-uuid="Compendium.arcane-arcade-fallout.properties.Item.31qCwzre2jXqsj8Y" data-id="31qCwzre2jXqsj8Y" data-type="Item" data-pack="arcane-arcade-fallout.conditions" data-tooltip="Click for details.">Targeted Attacks</a></p>
+    <div style="height:20px;">
+        <p><a class="content-link" draggable="false" data-link="" data-uuid="Compendium.arcane-arcade-fallout.properties.Item.31qCwzre2jXqsj8Y" data-id="31qCwzre2jXqsj8Y" data-type="Item" data-pack="arcane-arcade-fallout.conditions" data-tooltip="Click for details.">Targeted Attacks</a>
     </div>
-  </form>
+    <form autocomplete="off">
+        <div class="vault-boy-target"></div>
+        <div class="targeted-grid">
+            <div class="head-top"><button data-tooltip="Head (+4AP)" name="head"></button></div>
+            <div class="eyes"><button data-tooltip="Eyes (+5AP)" name="eyes"></button></div>
+            <div class="head-bottom"><button data-tooltip="Head (+4AP)" name="head"></button></div>
+            <div class="left-arm"><button data-tooltip="Arm (+3AP)" name="arm"></button></div>
+            <div class="left-hand"><button data-tooltip="Carried item (+3AP)" name="carried"></button></div>
+            <div class="torso"><button data-tooltip="Torso (+2AP)" name="torso"></button></div>
+            <div class="right-arm"><button data-tooltip="Arm (+3AP)" name="arm"></button></div>
+            <div class="right-hand"><button data-tooltip="Carried item (+3AP)" name="carried"></button></div>
+            <div class="groin"><button data-tooltip="Groin (+3AP)" name="groin"></button></div>
+            <div class="left-leg"><button data-tooltip="Leg (+2AP)" name="leg"></button></div>
+            <div class="right-leg"><button data-tooltip="Leg (+2AP)" name="leg"></button></div>
+        </div>
+    </form>
 </div>
+
