--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -17,7 +17,8 @@
       }}
     </td>
     <td class="armorbox meleebox">
-      <details {{#if system.combatActionsexpanded }} open="true" {{/if}}><summary data-combatExpand style="padding:7.5px;">Combat Actions</summary>
+      <details {{#if system.combatActionsexpanded }} open="true" {{/if}}>
+          <summary data-combatExpand style="padding:7.5px;background:#222;text-transform:uppercase;color:white;">Combat Actions</summary>
       {{> "systems/arcane-arcade-fallout/templates/actor/items/combat-actions.hbs" }}
         </details>
     </td>
