--- a/templates/actor/parts/actor-crafting.hbs
+++ b/templates/actor/parts/actor-crafting.hbs
@@ -2,8 +2,8 @@
     <tr>
         <td style="padding-right:10px;width:40%">
             <table class="equipped-stats" id="matsTable">
-                <tr><th colspan="999"><h3>Materials</h3></th></tr>
-                <tr><th>Name</th><th>Qty</th><th></th></tr>
+                <tr><td colspan="999"><h3>Materials</h3></td></tr>
+                <tr><td>Name</td><td>Qty</td><td></td></tr>
                 {{#each materials as |item id|}}
                 <tr>
                     <td>
@@ -32,8 +32,8 @@
         </td>
         <td>
             <table class="equipped-stats" id="junkTable">
-                <tr><th colspan=999><h3>junk</h3></th></tr>
-                <tr><th></th><th>Name</th><th>Qty</th><th>Materials</th></tr>
+                <tr><td colspan=999><h3>junk</h3></td></tr>
+                <tr><td></td><td>Name</td><td>Qty</td><td>Materials</td></tr>
                 {{#each junk as |item id|}}
                 <tr>
                     <td style="width:20px;">
