--- a/templates/actor/status/penalties.hbs
+++ b/templates/actor/status/penalties.hbs
@@ -66,7 +66,7 @@
             data-stat="exhaustion"
             data-type="penalties"
             class="fas fa-minus-square fakebutton nobackground"></i>
-            {{#Sum system.penalties.exhaustion.base system.penalties.exhaustion.modifiers}}{{/Sum}}
+            {{system.penalties.exhaustion.value}}
             <i style="padding: 3px"
             data-statAddition
             data-stat="exhaustion"
