--- a/templates/actor/status/passives.hbs
+++ b/templates/actor/status/passives.hbs
@@ -68,6 +68,6 @@
 <div class="grid grid-4col">
     <div title="Less Than 6 Hours of Rest" class="fakebutton" data-rest="short">Short Rest</div>
     <div title="6+ Hours of Rest" class="fakebutton" data-rest="long">Long Rest</div>
-    <div class="fakebutton">Custom Dice Roll</div>
+    <div class="fakebutton" data-custom-roll>Custom Dice Roll</div>
     <div class="fakebutton">Perk List</div>
 </div>
