--- a/templates/item/item-trait-sheet.hbs
+++ b/templates/item/item-trait-sheet.hbs
@@ -12,18 +12,6 @@
       <h1 class="charname">
         <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
       </h1>
-      <table>
-        <tr>
-          <td>Req:</td>
-          <td>
-            <input
-              type="text"
-              name="system.requirement.value"
-              value="{{ system.requirement.value }}"
-            />
-          </td>
-        </tr>
-      </table>
     </div>
   </header>
 
@@ -38,6 +26,8 @@
   <section class="sheet-body">
     {{!-- Description Tab --}}
     <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
+        Wild Wasteland Enabled:
+          <input type="checkbox" name="system.wildWasteland" {{checked system.wildWasteland}} /><hr />
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
       rollData prop. --}}
        {{editor system.description target="system.description" button=true engine="prosemirror" collaborate=false}}
