--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -4,27 +4,31 @@
             <legend>Bonuses / Penalties</legend>
             <div class="flex space-between">
                 <div>Skill Bonus:</div>
-                <div>{{ skillBonus }}</div>
+                <div>+ {{ skillBonus }}</div>
             </div>
             <div class="flex space-between">
                 <div>Perks Bonus:</div>
-                <div>{{ attackBonus }}</div>
+                <div>+ {{ attackBonus }}</div>
             </div>
             <div class="flex space-between">
                 <div>Ability Bonus:</div>
-                <div>{{ abilityBonus }}</div>
-            </div>
-            <div class="flex space-between">
-                <div>Decay Penalty:</div>
-                <div>{{ decayPenalty }}</div>
+                <div>+ {{ abilityBonus }}</div>
             </div>
             <div class="flex space-between">
                 <div>Luck:</div>
-                <div>{{ actorLuck }}</div>
+                <div>+ {{ actorLuck }}</div>
+            </div>
+            <div class="flex space-between">
+                <div>Decay Penalty:</div>
+                <div>- {{ decayPenalty }}</div>
             </div>
             <div class="flex space-between">
                 <div>Penalties:</div>
-                <div>{{ actorPenalties }}</div>
+                <div>- {{ actorPenalties }}</div>
+            </div><hr />
+            <div class="flex space-between">
+                <div>Total Bonuses:</div>
+                <div>{{ totalBonus }}</div>
             </div>
         </fieldset>
     </div>
