--- a/templates/item/item-powerArmor-sheet.hbs
+++ b/templates/item/item-powerArmor-sheet.hbs
@@ -100,6 +100,7 @@
     </div>
     {{!-- Crafting Tab --}}
     <div class="tab crafting" data-group="primary" data-tab="crafting">
+      {{> "systems/arcane-arcade-fallout/templates/item/parts/item-breakdown.hbs"}}
       {{> "systems/arcane-arcade-fallout/templates/item/parts/item-crafting.hbs"}}
     </div>
     {{!-- Upgrades Tab --}}
