Changes to Crafting UI

--- a/templates/actor/parts/actor-crafting.hbs
+++ b/templates/actor/parts/actor-crafting.hbs
@@ -6,8 +6,8 @@
                     <h3>
                         <i class="fa fa-sort-amount-asc" sortMat></i>&emsp; 
                             Materials  &emsp; 
-                        <i class="fa fa-cubes" actorCraft ></i> &emsp; 
-                        <i class="fa fa-list" craftRecipes></i>  
+                        <i class="fa fa-cubes" actorCraft title="Craft from materials in inventory"></i> &emsp; 
+                        <i class="fa fa-list" craftRecipes title="Browse through and craft from recipes"></i>  
                     </h3></td></tr>
                 <tr><td>Name</td><td>Qty</td><td></td></tr>
                 {{#each materials as |item id|}}
