--- a/css/chat.css
+++ b/css/chat.css
@@ -73,3 +73,226 @@
   background-color: #222;
   border: solid 1px;
 }
+
+/* Damage & Effects Trays */
+.falloutzero :is(.card-tray, .effects-tray) {
+  margin-top: 0.125rem;
+  &:has(.effects:empty) {
+    display: none;
+  }
+  &.damage-tray {
+    margin-block-start: 8px;
+  }
+
+  > label {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    gap: 0.25rem;
+    font-size: var(--font-size-11);
+
+    > span {
+      flex: none;
+    }
+    .fa-bolt,
+    .fa-heart-crack {
+      color: var(--color-text-light-6);
+    }
+    .fa-caret-down {
+      transition: all 250ms ease;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      flex-basis: 50%;
+      border-top: 1px dotted var(--aafo-color-gold);
+      align-self: center;
+    }
+  }
+
+  .target-source-control {
+    &:not([hidden]) {
+      display: flex;
+    }
+    justify-content: space-evenly;
+    gap: 4px;
+    margin-block-start: 1px;
+
+    button {
+      width: unset;
+      font-size: var(--font-size-10);
+      &:hover,
+      &:focus,
+      &[aria-pressed='true'] {
+        box-shadow: none;
+        text-shadow: 0 0 5px var(--color-shadow-highlight);
+      }
+    }
+  }
+
+  .effects,
+  .targets {
+    display: flex;
+    flex-direction: column;
+
+    .effect,
+    .target {
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      padding-bottom: 0.25rem;
+      margin-bottom: 0.25rem;
+      border-bottom: 1px solid var(--color-border-light-1);
+
+      &:last-child {
+        padding: 0;
+        margin: 0;
+        border: none;
+      }
+
+      > img {
+        width: 32px;
+        height: 32px;
+      }
+
+      .name-stacked {
+        flex: 1;
+      }
+    }
+    > .none {
+      text-align: center;
+      margin-block: 4px;
+    }
+  }
+
+  .effects .effect {
+    > button {
+      width: 28px;
+      height: 28px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 0 0 4px;
+      font-size: var(--font-size-12);
+    }
+  }
+
+  .targets .target {
+    flex-wrap: wrap;
+
+    .subtitle {
+      display: flex;
+      gap: 4px;
+    }
+
+    .change-source {
+      width: 13px;
+      height: 13px;
+      --icon-size: 13px;
+      padding: 0;
+      border-radius: 4px;
+      display: grid;
+      grid-template-areas: 'overlay';
+      font-size: inherit;
+      > * {
+        grid-area: overlay;
+      }
+      > aafo-icon {
+        display: block;
+      }
+      > i {
+        color: red;
+      }
+      &:not([aria-pressed='true']) .fa-slash {
+        display: none;
+      }
+      &:not([aria-pressed='mixed']) .fa-arrow-turn-down {
+        display: none;
+      }
+      .fa-arrow-turn-down {
+        position: relative;
+        left: 8px;
+        top: -1px;
+      }
+    }
+
+    .calculated {
+      padding-inline-end: 4px;
+      font-size: var(--font-size-14);
+      font-weight: bold;
+      color: var(--aafo-color-application-damage);
+
+      &.healing {
+        color: var(--aafo-color-application-healing);
+      }
+      &.temp {
+        color: var(--aafo-color-application-temp);
+      }
+    }
+
+    .damage-multipliers {
+      flex: 1 0 calc(100% - 6px);
+      display: grid;
+      grid-template-columns: auto repeat(6, 1fr);
+      gap: 2px;
+      margin-inline: 3px;
+      font-size: var(--font-size-11);
+
+      &::before {
+        content: '\f00d';
+        align-self: center;
+        padding-inline-end: 2px;
+        color: var(--aafo-color-tan);
+        font-family: var(--font-awesome);
+        font-weight: 900;
+      }
+
+      button {
+        width: 100%;
+        border-radius: 3px;
+        padding: 2px;
+        font-size: inherit;
+        line-height: unset;
+        cursor: pointer;
+
+        &::after {
+          content: '';
+          display: block;
+          width: 8px;
+          height: 8px;
+          border-radius: 8px;
+          background-color: var(--aafo-color-faint);
+        }
+
+        &[aria-pressed='true'] {
+          border-color: var(--aafo-color-crimson);
+          &::after {
+            background-color: var(--aafo-color-crimson);
+          }
+        }
+      }
+    }
+  }
+
+  .wrapper > button {
+    margin: 3px;
+    width: calc(100% - 6px);
+    margin-block-start: 6px;
+  }
+}
+
+.hidden-dc {
+  display: contents;
+}
+.visible-dc {
+  display: none;
+}
+[data-display-challenge] {
+  .hidden-dc {
+    display: none;
+  }
+  .visible-dc {
+    display: contents;
+  }
+}
