--- a/css/chat.css
+++ b/css/chat.css
@@ -1,4 +1,3 @@
-/* MESSAGE HEADER */
 .chat-sidebar .message-header {
   margin-bottom: 0.375rem;
 }
@@ -22,7 +21,7 @@
   object-position: top;
   border: none;
   flex: none;
-  background: var(--aafo-color-light-gray);
+  background: grey;
 }
 .chat-sidebar .message-header .name-stacked {
   flex: 1;
@@ -33,22 +32,18 @@
   line-height: normal;
 }
 .chat-sidebar .message-header .title {
-  font-family: var(--aafo-font-roboto-slab);
-  font-size: var(--font-size-16);
   font-weight: bold;
-  color: var(--color-text-dark-primary);
+  color: var(--green);
 }
 .chat-sidebar .message-header .subtitle {
-  font-size: var(--font-size-11);
-  color: var(--color-text-dark-5);
+  color: var(--user-color);
 }
 .chat-sidebar .message-header .message-metadata {
-  font-size: var(--font-size-10);
   transform: translate(2px, -4px);
   flex: none;
 }
 .chat-sidebar .message-header time {
-  color: var(--color-text-dark-5);
+  color: var(--user-color);
 }
 .chat-sidebar .message-header .flavor-text {
   margin-block-start: 4px;
@@ -58,12 +53,9 @@
 .chat-sidebar .message-header .title {
   color: var(--user-color);
 }
-
-/* MESSAGE CONTENT */
 .chat-sidebar .message-content .card-buttons {
   margin-top: 10px;
 }
-
 .chat-sidebar .message-content .card-buttons button:not(:first-of-type) {
   margin-top: 10px;
 }
@@ -73,226 +65,189 @@
   background-color: #222;
   border: solid 1px;
 }
-
-/* Damage & Effects Trays */
 .falloutzero :is(.card-tray, .effects-tray) {
   margin-top: 0.125rem;
-  &:has(.effects:empty) {
-    display: none;
-  }
-  &.damage-tray {
-    margin-block-start: 8px;
-  }
-
-  > label {
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    gap: 0.25rem;
-    font-size: var(--font-size-11);
-
-    > span {
-      flex: none;
-    }
-    .fa-bolt,
-    .fa-heart-crack {
-      color: var(--color-text-light-6);
-    }
-    .fa-caret-down {
-      transition: all 250ms ease;
-    }
-
-    &::before,
-    &::after {
-      content: '';
-      flex-basis: 50%;
-      border-top: 1px dotted var(--aafo-color-gold);
-      align-self: center;
-    }
-  }
-
-  .target-source-control {
-    &:not([hidden]) {
-      display: flex;
-    }
-    justify-content: space-evenly;
-    gap: 4px;
-    margin-block-start: 1px;
-
-    button {
-      width: unset;
-      font-size: var(--font-size-10);
-      &:hover,
-      &:focus,
-      &[aria-pressed='true'] {
-        box-shadow: none;
-        text-shadow: 0 0 5px var(--color-shadow-highlight);
-      }
-    }
-  }
-
-  .effects,
-  .targets {
-    display: flex;
-    flex-direction: column;
-
-    .effect,
-    .target {
-      display: flex;
-      gap: 0.5rem;
-      align-items: center;
-      padding-bottom: 0.25rem;
-      margin-bottom: 0.25rem;
-      border-bottom: 1px solid var(--color-border-light-1);
-
-      &:last-child {
-        padding: 0;
-        margin: 0;
-        border: none;
-      }
-
-      > img {
-        width: 32px;
-        height: 32px;
-      }
-
-      .name-stacked {
-        flex: 1;
-      }
-    }
-    > .none {
-      text-align: center;
-      margin-block: 4px;
-    }
-  }
-
-  .effects .effect {
-    > button {
-      width: 28px;
-      height: 28px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0 0 0 4px;
-      font-size: var(--font-size-12);
-    }
-  }
-
-  .targets .target {
-    flex-wrap: wrap;
-
-    .subtitle {
-      display: flex;
-      gap: 4px;
-    }
-
-    .change-source {
-      width: 13px;
-      height: 13px;
-      --icon-size: 13px;
-      padding: 0;
-      border-radius: 4px;
-      display: grid;
-      grid-template-areas: 'overlay';
-      font-size: inherit;
-      > * {
-        grid-area: overlay;
-      }
-      > aafo-icon {
-        display: block;
-      }
-      > i {
-        color: red;
-      }
-      &:not([aria-pressed='true']) .fa-slash {
-        display: none;
-      }
-      &:not([aria-pressed='mixed']) .fa-arrow-turn-down {
-        display: none;
-      }
-      .fa-arrow-turn-down {
-        position: relative;
-        left: 8px;
-        top: -1px;
-      }
-    }
-
-    .calculated {
-      padding-inline-end: 4px;
-      font-size: var(--font-size-14);
-      font-weight: bold;
-      color: var(--aafo-color-application-damage);
-
-      &.healing {
-        color: var(--aafo-color-application-healing);
-      }
-      &.temp {
-        color: var(--aafo-color-application-temp);
-      }
-    }
-
-    .damage-multipliers {
-      flex: 1 0 calc(100% - 6px);
-      display: grid;
-      grid-template-columns: auto repeat(6, 1fr);
-      gap: 2px;
-      margin-inline: 3px;
-      font-size: var(--font-size-11);
-
-      &::before {
-        content: '\f00d';
-        align-self: center;
-        padding-inline-end: 2px;
-        color: var(--aafo-color-tan);
-        font-family: var(--font-awesome);
-        font-weight: 900;
-      }
-
-      button {
-        width: 100%;
-        border-radius: 3px;
-        padding: 2px;
-        font-size: inherit;
-        line-height: unset;
-        cursor: pointer;
-
-        &::after {
-          content: '';
-          display: block;
-          width: 8px;
-          height: 8px;
-          border-radius: 8px;
-          background-color: var(--aafo-color-faint);
-        }
-
-        &[aria-pressed='true'] {
-          border-color: var(--aafo-color-crimson);
-          &::after {
-            background-color: var(--aafo-color-crimson);
-          }
-        }
-      }
-    }
-  }
-
-  .wrapper > button {
-    margin: 3px;
-    width: calc(100% - 6px);
-    margin-block-start: 6px;
-  }
 }
-
-.hidden-dc {
-  display: contents;
-}
-.visible-dc {
+.falloutzero :is(.card-tray:has(.effects:empty), .effects-tray):has(.effects:empty) {
   display: none;
 }
-[data-display-challenge] {
-  .hidden-dc {
-    display: none;
-  }
-  .visible-dc {
-    display: contents;
-  }
+.falloutzero :is(.card-tray.damage-tray, .effects-tray).damage-tray {
+  margin-block-start: 8px;
+  text-align: center;
+}
+.falloutzero :is(.card-tray > label, .effects-tray) > label {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  gap: 0.25rem;
+}
+.falloutzero :is(.card-tray > label > span, .effects-tray) > label > span {
+  flex: none;
+}
+.falloutzero
+  :is(
+    .card-tray > label .fa-bolt,
+    .falloutzero :is(.card-tray > label .fa-heart-crack, .effects-tray) > label .fa-bolt,
+    .effects-tray
+  )
+  > label
+  .fa-heart-crack {
+  color: yellow;
+}
+.falloutzero :is(.card-tray > label .fa-caret-down, .effects-tray) > label .fa-caret-down {
+  transition: all 250ms ease;
+}
+
+.falloutzero .card-tray .targets {
+  display: flex;
+  flex-direction: column;
+}
+
+.falloutzero .card-tray .targets .target {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding-bottom: 0.25rem;
+  margin-bottom: 0.25rem;
+  border-bottom: 1px solid grey;
+}
+
+.falloutzero .card-tray .targets .target:last-child {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.falloutzero .card-tray .targets .target > img {
+  width: 32px;
+  height: 32px;
+}
+
+.falloutzero .card-tray .targets .target .name-stacked {
+  flex: 1;
+}
+
+.falloutzero .card-tray .targets .target .name-stacked > .none {
+  text-align: center;
+  margin-block: 4px;
+}
+
+.falloutzero .card-tray .targets .target {
+  flex-wrap: wrap;
+}
+.falloutzero .card-tray .targets .target .subtitle {
+  display: flex;
+  gap: 4px;
+}
+.falloutzero .card-tray .targets .target .change-source {
+  width: 13px;
+  height: 13px;
+  padding: 0;
+  border-radius: 4px;
+  display: grid;
+  grid-template-areas: 'overlay';
+  font-size: inherit;
+}
+.falloutzero .card-tray .targets .target .change-source > * {
+  grid-area: overlay;
+}
+.falloutzero .card-tray .targets .target .change-source > aafo-icon {
+  display: block;
+}
+.falloutzero .card-tray .targets .target .change-source > i {
+  color: red;
+}
+.falloutzero .card-tray .targets .target .change-source:not([aria-pressed='true']) .fa-slash {
+  display: none;
+}
+.falloutzero
+  .card-tray
+  .targets
+  .target
+  .change-source:not([aria-pressed='mixed'])
+  .fa-arrow-turn-down {
+  display: none;
+}
+.falloutzero .card-tray .targets .target .change-source .fa-arrow-turn-down {
+  position: relative;
+  left: 8px;
+  top: -1px;
+}
+.falloutzero .card-tray .targets .target .calculated {
+  padding-inline-end: 4px;
+  font-weight: bold;
+  color: red;
+}
+.falloutzero .card-tray .targets .target .calculated.healing {
+  color: green;
+}
+.falloutzero .card-tray .targets .target .calculated.temp {
+  color: yellow;
+}
+.falloutzero .card-tray .targets .target .damage-multipliers {
+  flex: 1;
+  display: grid;
+  grid-template-columns: auto repeat(5, 1fr);
+  gap: 2px;
+  margin-inline: 3px;
+}
+.falloutzero .card-tray .targets .target .damage-multipliers button {
+  display: flex;
+  gap: 3px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  font-size: inherit;
+  line-height: unset;
+  cursor: pointer;
+}
+.falloutzero .card-tray .targets .target .damage-multipliers button::after {
+  content: '';
+  display: block;
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background-color: transparent;
+}
+.falloutzero .card-tray .targets .target .damage-multipliers button[aria-pressed='true'] {
+  border-color: var(--user-color);
+}
+.falloutzero .card-tray .targets .target .damage-multipliers button[aria-pressed='true']::after {
+  background-color: var(--user-color);
+}
+
+.falloutzero .card-tray .wrapper > button {
+  margin: 3px;
+  width: calc(100% - 6px);
+  margin-block-start: 6px;
+}
+
+.falloutzero .hidden-dc {
+  display: contents;
+}
+.falloutzero .visible-dc {
+  display: none;
+}
+.falloutzero [data-display-challenge] .hidden-dc {
+  display: none;
+}
+.falloutzero [data-display-challenge] .visible-dc {
+  display: contents;
+}
+.falloutzero .collapsible.collapsed label .fa-caret-down {
+  transform: rotate(-90deg);
+}
+.falloutzero .collapsible.collapsed .collapsible-content {
+  grid-template-rows: 0fr;
+}
+.falloutzero .collapsible .fa-caret-down {
+  transition: transform 250ms ease;
+}
+.falloutzero .collapsible .collapsible-content {
+  display: grid;
+  grid-template-rows: 1fr;
+  transition: grid-template-rows 250ms ease;
+}
+.falloutzero .collapsible .collapsible-content > .wrapper {
+  overflow: hidden;
 }
