--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -180,6 +180,7 @@
       <a class="item" data-tab="medicine">AID</a>
       <a class="item" data-tab="backpack">BACKPACK</a>
       <a class="item" data-tab="crafting">CRAFTING</a>
+      <a class="item" data-tab="drdv">DR/DV</a>
       <a class="item" data-tab="notes">NOTES</a>
       {{#GM}}<a class="item" data-tab="effects">EFFECTS</a>{{/GM}}
     </nav>
@@ -247,6 +248,11 @@
       {{!-- Crafting Tab --}}
       <div class="tab crafting" data-group="primary" data-tab="crafting">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-crafting.hbs"}}
+      </div>
+
+      {{!-- DRDV Tab --}}
+      <div class="tab" data-group="primary" data-tab="drdv">
+        {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-drdv.hbs"}}
       </div>
       {{!-- Notes Tab --}}
       <div class="tab notes" data-group="primary" data-tab="notes">
