--- a/templates/item/item-meleeWeapon-sheet.hbs
+++ b/templates/item/item-meleeWeapon-sheet.hbs
@@ -84,6 +84,7 @@
         </tr>
         <tr>
           <td>Ammo Type</td>
+          <td>Ammo Assigned</td>
           <td>Capacity</td>
           <td>Load</td>
           <td>CND</td>
