Fixed Crafting Rolls & Randomizer

--- a/templates/actor/parts/actor-crafting.hbs
+++ b/templates/actor/parts/actor-crafting.hbs
@@ -6,7 +6,7 @@
                     <h3>
                         <i class="fa fa-sort-amount-asc" sortMat></i>&emsp; 
                             Materials  &emsp; 
-                        <i class="fa fa-cubes" actorCraft title="Craft from materials in inventory"></i> &emsp; 
+                        <i style="visibility:hidden;" class="fa fa-cubes" actorCraft title="Craft from materials in inventory"></i> &emsp; 
                         <i class="fa fa-list" craftRecipes title="Browse through and craft from recipes"></i>  
                     </h3></td></tr>
                 <tr><td>Name</td><td>Qty</td><td></td></tr>
@@ -41,7 +41,7 @@
                     <h3>
                         <i class="fa fa-sort-amount-asc" sortJunk></i>&emsp; 
                         junk &emsp; 
-                        <i class="fa fa-solid fa-screwdriver-wrench" breakdownAll></i> 
+                        <i style="visibility:hidden;" class="fa fa-solid fa-screwdriver-wrench" breakdownAll></i> 
                         
                     </h3></td></tr>
                 <tr><td></td><td>Name</td><td>Qty</td><td>Materials</td></tr>
